--- a/Index.html
+++ b/Index.html
@@ -19,19 +19,19 @@
 
     <!--NAVBAR-->
 
-    <nav class="navbar navbar-expand-lg bg-body-hsl(0, 0%, 100%)">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="./images/logo.svg"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <img src="./images/icon-hamburger.svg">
-            </button>
-        </div>
-        <div class="collapse navbar-collapse d-flex gap-5 mx-auto" id="navbarSupportedContent">
-            <div class="nav-pages">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav justify-content-center ">
-                    <li class="nav-item">
+    <div class="right sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="./images/logo.svg"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <img src="./images/icon-hamburger.svg">
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
+                    <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
@@ -46,16 +46,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Career</a>
                     </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn reqBtn"
+                            style="color:white; width: 150px; border-radius: 50px;"><a href="#"
+                                style="color: white; text-decoration: none;">Request Invite</a></button>
+
+                    </li>
                 </ul>
             </div>
-            <div class="right reqBtn">
-                <button
-                    style="border: none; background-color: #00ffff; color: #ffffff; border-radius: 20px; width: auto; padding: 3px;">
-                    Request Invite
-                </button>
-            </div>
-        </div>
-        </div>
+    </div>
+    </div>
     </nav>
 
     <!--HERO SECTION-->
@@ -68,14 +68,14 @@
                     Take your financial life online. Your Easybank account<br> will be a one-stop-shop for spending,
                     saving,<br>
                     budgeting, investing, and much more.</p>
-                <button
-                    style="padding:0; margin: 0; border: none; background-color: #00ffff; color: #ffffff; border-radius: 20px; width: auto; font-size: 25px; height: 35px;">
-                    Request Invite
-                </button>
+
+                <button type="button" class="btn reqBtn" style="color:white; width: 150px; border-radius: 50px;"><a
+                        href="#" style="color: white; text-decoration: none;">Request Invite</a></button>
+
         </div>
         <div class="col-md-4 themed-grid-col text-center mt-3 hero-right" style="">
 
-            <img src="./images/image-mockups.png" alt="" class="heroImg mt-5">
+            <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-5">
         </div>
     </div>
 
@@ -210,7 +210,7 @@
         </div>
     </section>
     <!--FOOTER SECTION-->
-    <section class="footer">
+    <section class="footer pt-5">
         <footer class="container">
             <div class="row text-center">
                 <div class="col-12 col-sm-4 themed-grid-col" style="color: hsl(0, 0%, 100%);">
@@ -220,32 +220,50 @@
                     </div>
 
                     <div class="socials mt-3">
-                        <img src="./images/icon-facebook.svg">
-                        <img src="./images/icon-youtube.svg">
-                        <img src="./images/icon-twitter.svg">
-                        <img src="./images/icon-pinterest.svg">
-                        <img src="./images/icon-instagram.svg">
+                        <img src="./images/icon-facebook.svg" class="socials">
+                        <img src="./images/icon-youtube.svg" class="socials">
+                        <img src="./images/icon-twitter.svg" class="socials">
+                        <img src="./images/icon-pinterest.svg" class="socials">
+                        <img src="./images/icon-instagram.svg" class="socials">
                     </div>
                 </div>
-                <div class="col-12 col-sm-4 themed-grid-col  link" style="color: hsl(0, 0%, 100%);">
-                    <ul>
-                        <div>
-                            <li style="color: #ffffff; list-style: none; font-size: 15px;">About Us</li>
-                            <li style="color: #ffffff; list-style: none; font-size: 15px;"">Contact</li>
-                            <li style=" color: #ffffff; list-style: none; font-size: 15px;"">Blog</li>
-                        </div>
-                        <div>
-                            <li style="color: #ffffff; list-style: none; font-size: 15px;"">Career</li>
-                            <li style=" color: #ffffff; list-style: none; font-size: 15px;"">Support</li>
-                            <li style="color: #ffffff; list-style: none; font-size: 15px;"">Privacy Policies</li>
-                        </div>
-                    </ul>
+                <div class="col-12 col-sm-4 themed-grid-col  link" style="display: flex; text-align: left; gap: 7;">
+                    <div>
+                        <ul>
+
+                            <li style="color:  hsl(0, 0%, 100%); list-style: none; font-size: 15px;">About Us</li>
+                            <li style="color: hsl(0, 0%, 100%); list-style: none; font-size: 15px;"">Contact</li>
+                            <li style=" color: hsl(0, 0%, 100%); list-style: none; font-size: 15px;"">Blog</li>
+
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li style="color: hsl(0, 0%, 100%); list-style: none; font-size: 15px;"">Career</li>
+                                <li style=" color: hsl(0, 0%, 100%); list-style: none; font-size: 15px;"">Support</li>
+                            <li style="color: hsl(0, 0%, 100%); list-style: none; font-size: 15px;"">Privacy Policies</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class=" col-12 col-sm-4 themed-grid-col" style="color: hsl(0, 0%, 100%);">.col-6 .col-sm-4
-                        </div>
+                <div class=" col-12 col-sm-4 themed-grid-col">
+                                <div>
+                                    <button type="button" class="btn reqBtn"
+                                        style="color:white; width: 150px; border-radius: 50px;"><a href="#"
+                                            style="color: hsl(0, 0%, 100%); text-decoration: none;">Request
+                                            Invite</a></button>
+
+                                </div>
+
+                                <div class="mt-3">
+                                    <p style="color:hsl(233, 8%, 62%); font-size: 12px;">&copy; Easybank. All Right
+                                        Reserved</p>
+                                </div>
+                    </div>
+
                 </div>
         </footer>
     </section>
+
 </body>
 
 </html>
