--- a/Index.html
+++ b/Index.html
@@ -19,9 +19,9 @@
 
     <!--NAVBAR-->
 
-    <div class="right sticky-top">
+    <div class="align-center mx-auto sticky-top">
         <nav class="navbar navbar-expand-lg bg-body-light">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#"><img src="./images/logo.svg"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -30,7 +30,7 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline justify-content-center">
                     <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -73,9 +73,9 @@
                         href="#" style="color: white; text-decoration: none;">Request Invite</a></button>
 
         </div>
-        <div class="col-md-4 themed-grid-col text-center mt-3 hero-right" style="">
+        <div class="col-md-4 themed-grid-col mt-3 hero-right" style="">
 
-            <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-5">
+            <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-5 pr-2">
         </div>
     </div>
 
