--- a/Index.html
+++ b/Index.html
@@ -146,7 +146,7 @@
 
 
             <div class="row mb-3">
-                <div class="col-12 col-sm-3 themed-grid-col">
+                <div class="col-12 col-md-3 themed-grid-col">
                     <div class="card mb-3" style="width: 16rem; border: none;">
                         <img src="./images/image-currency.jpg" class="card-img-top" alt="..."
                             style="width: 16rem; height: 11rem;">
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-3 themed-grid-col">
+                <div class="col-12 col-md-3 themed-grid-col">
                     <div class="card mb-3" style="width: 16rem; border: none;">
                         <img src="./images/image-restaurant.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-3 themed-grid-col">
+                <div class="col-12 col-md-3 themed-grid-col">
                     <div class="card mb-3" style="width: 16rem; border: none;">
                         <img src="./images/image-plane.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-3 themed-grid-col">
+                <div class="col-12 col-md-3 themed-grid-col">
                     <div class="card mb-3" style="width: 16rem; border: none;">
                         <img src="./images/image-confetti.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -263,7 +263,6 @@
                 </div>
         </footer>
     </section>
-
 </body>
 
 </html>
