--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
     <!--HERO SECTION-->
 
     <div class="row mb-0 text-left  container-fluid hero pt-5">
-        <div class="col-md-8 themed-grid-col mt-5">
+        <div class="col-md-4 themed-grid-col mt-5">
             <h1 style="line-height: 1.5em;">
                 Next generation<br> digital banking
                 <p class="mt-3 hero-text">
@@ -73,9 +73,9 @@
                         href="#" style="color: white; text-decoration: none;">Request Invite</a></button>
 
         </div>
-        <div class="col-md-4 themed-grid-col mt-3 hero-right" style="">
+        <div class="col-md-8 themed-grid-col mt-0 hero-right text-center" style="">
 
-            <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-5 pr-2">
+            <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-0 pr-0">
         </div>
     </div>
 
