--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
                         href="#" style="color: white; text-decoration: none;">Request Invite</a></button>
 
         </div>
-        <div class="col-md-8 themed-grid-col mt-0 hero-right text-center" style="">
+        <div class="col-md-8 themed-grid-col mt-0 hero-right text-center mx-auto" style="">
 
             <img src="./images/new-bg-intro-desktop.png" alt="" class="heroImg mt-0 pr-0">
         </div>
