--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,7 @@
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Public Sans' rel='stylesheet'>
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Web3Bridge-Easy-Banking</title>
 </head>
